--- a/src/components/Detalles/componentes/Detalle.css
+++ b/src/components/Detalles/componentes/Detalle.css
@@ -1,37 +1,87 @@
-.container{
-    margin-left: 110px;
-    margin-top: 50px;
-    background-color: #a4bd82;
-}
-h1{
+.btn-cancelar {
+    width: 50px;
+    height: 60px;
+    display: inline-block;
+    border-radius: 4px;
+    background-color: #f4511e;
+    border: none;
+    color: #FFFFFF;
     text-align: center;
-}
-.mapa{
-    padding-left: -10px;
-    margin-left: 0px;
-    width: 450px;
-    height: 400px;
-    background-color: black;
+    font-size: 28px;
+    padding: 20px;
+    width: 200px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+  }
+  
+  .btn-cancelar span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
+  
+  .btn-cancelar span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+  }
+  
+  .btn-cancelar:hover span {
+    padding-right: 25px;
+  }
+  
+  .btn-cancelar:hover span:after {
+    opacity: 1;
+    right: 0;
+  }
+
+  .btn-participar {
+    width: 50px;
+    height: 60px;
+    position: relative;
+    background-color: #4CAF50;
+    border: none;
+    font-size: 28px;
+    color: #FFFFFF;
+    padding: 20px;
+    width: 200px;
+    text-align: center;
+    transition-duration: 0.4s;
+    text-decoration: none;
     overflow: hidden;
-    border-radius: 10px;
-    border: solid 1px white;
-}
-.det{
-    border-left: 5px solid rgb(27, 26, 26);
-    text-align: center;
-    margin-left: 10px;
-}
-.btn{
-    background-color: #7D9857;
-}
-.p{
-    background-color: #7D9857;
-}
-.texto{
-    text-align: justify;
-    margin-left: 10px;
-    margin-top: -20px;
-}
-.pr{
-    text-align: justify;
-}
+    cursor: pointer;
+  }
+  
+  .btn-participar:after {
+    content: "";
+    background: #f1f1f1;
+    display: block;
+    position: absolute;
+    padding-top: 300%;
+    padding-left: 350%;
+    margin-left: -20px !important;
+    margin-top: -120%;
+    opacity: 0;
+    transition: all 0.8s
+  }
+  
+  .btn-participar:active:after {
+    padding: 0;
+    margin: 0;
+    opacity: 1;
+    transition: 0s
+  }
+
+  .det:hover{
+    box-shadow: 5px 5px 5px;
+  }
+
+  .pic:hover{
+      transform:scale(1.3);
+     z-index: 10;
+  }
