--- a/src/components/Detalles/componentes/Detalle.css
+++ b/src/components/Detalles/componentes/Detalle.css
@@ -78,9 +78,12 @@
   }
 
   .det:hover{
-    box-shadow: 5px 5px 5px;
+   text-shadow: 3px 3px 3px black;
   }
-
+  .inf:hover{
+    text-shadow: 3px 3px 3px black;
+  }
+ 
   .pic:hover{
       transform:scale(1.3);
      z-index: 10;
