reparacion de landing

--- a/src/components/Detalles/componentes/Detalle.css
+++ b/src/components/Detalles/componentes/Detalle.css
@@ -44,7 +44,7 @@
     width: 50px;
     height: 60px;
     position: relative;
-    background-color: #4CAF50;
+    background-color: #88c861;
     border: none;
     font-size: 28px;
     color: #FFFFFF;
