--- a/src/components/informacion-compo/informacion.css
+++ b/src/components/informacion-compo/informacion.css
@@ -12,12 +12,19 @@ body {
       content: "";
       display: table;
       clear: both;
-      background: #0CF78B;
+      background: #0cf7897c;
       color: #ffffff;
-      font-size: 21;
+      text-shadow: 4px 2px 7px black;
       text-align: center;
       align-items: center;
+      transition: background 1.5s ;
     }
+    .row:hover{
+      background: rgba(34, 32, 32, 0.698);
+    }
+
+    
+
     .column {
         float: left;
         width: 50%;
@@ -31,4 +38,41 @@ body {
     text-align: justify;  
     padding: 5px;
     
+    }
+
+    .imagenes{
+      animation: transform 700ms ease-in-out;
+
+    }
+
+    .imagenes:hover .img1{
+      animation: animate1 700ms ease-in-out;
+
+      transform: translateX(150px);
+    }
+    .imagenes:hover .img2{
+      animation: animate2 700ms ease-in-out;
+
+      transform: translateX(-120px);
+    }
+
+    @keyframes animate1 {
+      0%{
+        transform: translateX(0px);
+      }
+     100%{
+      transform: translateX(150px);
+     } 
+    }
+    @keyframes animate2 {
+      0%{
+        transform: translateX(0px);
+      }
+     100%{
+      transform: translateX(-120px);
+      
+     } 
+     0%{
+      transform: translateX(0px);
+    }
     }
