--- a/src/components/gallery/galeria.css
+++ b/src/components/gallery/galeria.css
@@ -2,7 +2,7 @@
 
 :root{
   --primary: #efb6b2;
-  --secondary:#191970;
+  --secondary:#4e86ff;
   --error: #ff4a4a;
 }
 
@@ -20,6 +20,7 @@ body{
   font-size: 1.2rem;
   letter-spacing: 2px;
   font-weight: normal;
+ 
 }
 .title h2, .title p{
   text-align: center;
