--- a/src/components/gallery/lugares.css
+++ b/src/components/gallery/lugares.css
@@ -72,3 +72,19 @@ section .sec1
     width:100%;
     height: 100vh;
 }
+.buttons{
+    background:linear-gradient(to left ,rgba(111, 200, 135, 0.87),rgba(48, 189, 83, 0.87),rgba(22, 107, 43, 0.87));
+    margin: 2px;
+    border-radius: 2px;
+    text-decoration: none;
+    color:rgb(255, 255, 255);
+    text-shadow: 5px 5px 5px black;
+    transition: background 1.5s ;
+}
+.buttons:hover{
+    background: linear-gradient(to left, rgb(16, 51, 116),rgb(40, 102, 218),rgb(124, 153, 207));
+}
+.buttons:active{
+    transform: scale(0.9);
+    box-shadow: 4px -4px 4px  black;
+}
