--- a/src/components/login/Cliente/componente/cliente.css
+++ b/src/components/login/Cliente/componente/cliente.css
@@ -1,10 +1,141 @@
-body {
-    margin: 0;
-    padding: 0;
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+                                                                                                                                     /*forgot-pass:hover a{text-decoration: underline}button{margin: 15px 0;width: 100%;height: 50px;color: #000;font-size: 18px;font-weight: 60 background: #dde1e7;border: none;outline: nocursor: pointer;border-radius: 25px;box-shadow: 2px 2px 5px #babecc,-5px -5px 10px #ffffff73;}*/
+.content{   
+  margin-left: 2%;
+  top: 30%;
+  width: 540px;
+  height: 100%;
+  background: #dde1e775;
+  border-radius: 10px;
+  padding: 40px 30px;
+  box-shadow: -3px -3px 7px #ffffff73,
+              2px 2px 5px rgba(94, 104, 121, 0.288);
 }
 
-.buton{
-    background-color: black;
-    width: 50px;
-    
+.content .text{
+  font-size: 33px;
+  font-weight: 600;
+  margin-bottom: 35px;
+  margin-left: 33%;
+  color: rgb(40, 168, 253);
 }
+                                                                                                                                     /*forgot-pass:hover a{text-decoration: underline}button{margin: 15px 0;width: 100%;height: 50px;color: #000;font-size: 18px;font-weight: 60 background: #dde1e7;border: none;outline: nocursor: pointer;border-radius: 25px;box-shadow: 2px 2px 5px #babecc,-5px -5px 10px #ffffff73;}*/
+.content .field{
+  height: 50px;
+  width: 100%;
+  display: flex;
+  position: relative;
+}
+
+.field input{
+  height: 100%;
+  width: 100%;
+  padding-left: 45px;
+  font-size: 18px;
+  outline: none;
+  border: none;
+  color: #595959;
+  background: #dde1e7;                                                                                                                                     /*forgot-pass:hover a{text-decoration: underline}button{margin: 15px 0;width: 100%;height: 50px;color: #000;font-size: 18px;font-weight: 60 background: #dde1e7;border: none;outline: nocursor: pointer;border-radius: 25px;box-shadow: 2px 2px 5px #babecc,-5px -5px 10px #ffffff73;}*/
+  border-radius: 25px;
+  box-shadow: inset 2px 2px 5px #babecc,
+              inset -5px -5px 10px #ffffff73;
+}
+
+.field input:active{
+  box-shadow: inset -5px -5px 10px #babecc,
+                inset 2px 2px 5px #ffffff73;
+               
+}
+#texto{
+    width: 100%;
+    background: rgba(0, 0, 0, 0.281);
+    color: #ffffff;
+    font-size: 34px;
+}
+
+
+.field:nth-child(2){
+  margin-top: 20px;
+}
+
+.field span{                                                                                                                                     /*forgot-pass:hover a{text-decoration: underline}button{margin: 15px 0;width: 100%;height: 50px;color: #000;font-size: 18px;font-weight: 60 background: #dde1e7;border: none;outline: nocursor: pointer;border-radius: 25px;box-shadow: 2px 2px 5px #babecc,-5px -5px 10px #ffffff73;}*/
+  position: absolute;
+  width: 50px;
+  line-height: 50px;
+  color: #595959;
+}
+
+.field label{
+  position: absolute;
+  top: 50%;
+  left: 45px;
+  pointer-events: none;
+  color: #666666;
+  transform: translateY(-50%);
+}
+
+
+.field input:focus ~ label{                                                                                                                                     /*forgot-pass:hover a{text-decoration: underline}button{margin: 15px 0;width: 100%;height: 50px;color: #000;font-size: 18px;font-weight: 60 background: #dde1e7;border: none;outline: nocursor: pointer;border-radius: 25px;box-shadow: 2px 2px 5px #babecc,-5px -5px 10px #ffffff73;}*/
+  opacity: 0;
+}
+
+.forgot-pass{
+  text-align: left;
+  margin: 10px 0 10px 5px;
+}
+
+.forgot-pass a{
+  font-size: 16px;
+  color: #3498db;
+  text-decoration: none;
+}
+
+.forgot-pass:hover a{
+  text-decoration: underline;
+}                                                                                                                                     /*forgot-pass:hover a{text-decoration: underline}button{margin: 15px 0;width: 100%;height: 50px;color: #000;font-size: 18px;font-weight: 60 background: #dde1e7;border: none;outline: nocursor: pointer;border-radius: 25px;box-shadow: 2px 2px 5px #babecc,-5px -5px 10px #ffffff73;}*/
+
+.ss{
+  margin: 15px 0;
+  width: 100%;
+  height: 50px;
+  color: rgb(29, 127, 255);
+  font-size: 18px;
+  font-weight: 600;
+  background: #dde1e7;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  border-radius: 25px;
+  box-shadow: 2px 2px 5px #babecc,
+              -5px -5px 10px #ffffff73;
+    transition: background 1s;
+}
+    
+.ss:hover{
+    background: #5192f5;
+    color:#ffffff;
+}
+.ss:focus{
+  color: #ffe550;
+  box-shadow: inset 2px 2px 5px #babecc,
+              inset -5px -5px 10px #ffffff73;
+}
+
+
+.signup{
+  font-size: 16px;
+  color: #595959;
+  margin: 10px 0;
+}
+
+.signup a{
+  color: #000;
+  text-decoration: none;
+}
+
+.signup a:hover{
+  text-decoration: underline;
+}                                                                                                                                     /*forgot-pass:hover a{text-decoration: underline}button{margin: 15px 0;width: 100%;height: 50px;color: #000;font-size: 18px;font-weight: 60 background: #dde1e7;border: none;outline: nocursor: pointer;border-radius: 25px;box-shadow: 2px 2px 5px #babecc,-5px -5px 10px #ffffff73;}*/
+
+      
