--- a/src/components/informacion-compo/informacion.css
+++ b/src/components/informacion-compo/informacion.css
@@ -10,7 +10,7 @@ body {
       content: "";
       display: table;
       clear: both;
-      background: #0cf7897c;
+      background: #88c861;
       color: #ffffff;
       text-shadow: 4px 2px 7px black;
       text-align: center;
