--- a/src/components/gallery/galeria.css
+++ b/src/components/gallery/galeria.css
@@ -29,6 +29,9 @@ body{
   margin-top: 60px;
   font-size: 2.6rem;
 }
+.titleC{
+  font-family: 'Akaya Telivigala', cursive;
+}
 
 /* upload form styles */
 form{
@@ -111,4 +114,8 @@ label:hover{
   margin: 60px auto;
   box-shadow: 3px 5px 7px rgba(0,0,0,0.5);
   border: 3px solid rgb(223, 208, 208);
+}
+
+#motion{
+  font-family: 'Roboto Slab', serif;
 }
