--- a/src/components/informacion-compo/informacion.css
+++ b/src/components/informacion-compo/informacion.css
@@ -15,10 +15,14 @@ body {
       /* text-shadow: 4px 2px 7px black; */
       text-align: center;
       align-items: center;
+      min-height: 100vh;
       transition: background 1.5s ;
+      font-family: 'Chivo', sans-serif;
+      
     }
     .row:hover{
-      background: rgba(43, 128, 255, 0.698);
+      background: rgba(2, 46, 112, 0.726);
+      font-weight: bold;
     }
 
     
