--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Chivo:ital,wght@1,300&display=swap');
