--- a/src/components/Detalles/componentes/Detalle.css
+++ b/src/components/Detalles/componentes/Detalle.css
@@ -41,7 +41,7 @@
   }
 
   .btn-participar {
-    width: 50px;
+    
     height: 60px;
     position: relative;
     background-color: #88c861;
@@ -76,9 +76,15 @@
     opacity: 1;
     transition: 0s
   }
+  .det{
+    height: auto;
+  }
 
   .det:hover{
    text-shadow: 3px 3px 3px black;
+  }
+  .inf{
+    height: auto;
   }
   .inf:hover{
     text-shadow: 3px 3px 3px black;
@@ -87,4 +93,41 @@
   .pic:hover{
       transform:scale(1.3);
      z-index: 10;
+  }
+
+  .btnver {
+   
+    height: 60px;
+    position: relative;
+    background-color: #88c861;
+    border: none;
+    font-size: 22px;
+    color: #FFFFFF;
+    padding: 20px;
+    width: 300px;
+    text-align: center;
+    transition-duration: 0.4s;
+    text-decoration: none;
+    overflow: hidden;
+    cursor: pointer;
+  }
+  
+  .btnver:after {
+    content: "";
+    background: #f1f1f1;
+    display: block;
+    position: absolute;
+    padding-top: 300%;
+    padding-left: 350%;
+    margin-left: -20px !important;
+    margin-top: -120%;
+    opacity: 0;
+    transition: all 0.8s
+  }
+  
+  .btnver:active:after {
+    padding: 0;
+    margin: 0;
+    opacity: 1;
+    transition: 0s
   }
