diseño compuesto de detalles

--- a/src/components/Detalles/componentes/Detalle.css
+++ b/src/components/Detalles/componentes/Detalle.css
@@ -78,6 +78,7 @@
   }
   .det{
     height: auto;
+    border-radius: 15px 15px 0 0 ;
   }
 
   .det:hover{
@@ -85,6 +86,7 @@
   }
   .inf{
     height: auto;
+    border-radius: 0 0 15px 15px ;
   }
   .inf:hover{
     text-shadow: 3px 3px 3px black;
